--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="#">Store</a></li>
+                <li>
+                    <a href="#">A propos</a>
+                </li>
                 <li><a href="#">Service</a></li>
                 <li><a href="#">Boutique</a></li>
-                <li></li><a href="#">contact</a></li>
+                <li><a href="#">contact</a></li>
             </ul>
         </div>
         <div class="line"></div>
