--- a/index.html
+++ b/index.html
@@ -30,8 +30,16 @@
         </div>
         <div class="line"></div>
     </header>
-
-    <script type="text/javascript" src="assets/jquery.min.js"></script>
+    <main>
+        <div class="carousel">
+            <div class="carousel__figure">
+                <img src="./media/car1.jpg" alt="Espace" class="carousel__figure--pic" />
+                <img src="./media/car2.jpeg" alt="Lune" class="carousel__figure--pic" />
+                <img src="./media/car3.jpg" alt="Mars" class="carousel__figure--pic" />
+            </div>
+        </div>
+    </main>
+    <script type=" text/javascript " src="assets/jquery.min.js "></script>
 </body>
 
 </html>
