--- a/index.html
+++ b/index.html
@@ -30,10 +30,41 @@
     <main>
         <div class="carousel">
             <div class="carousel__figure">
-                <img src="./media/car1.jpg" alt="Espace" class="carousel__figure--pic" />
                 <img src="./media/car2.jpeg" alt="Lune" class="carousel__figure--pic" />
+                <img src="./media/car1.jpg" alt="Espace" class="carousel__figure--pic" />
                 <img src="./media/car3.jpg" alt="Mars" class="carousel__figure--pic" />
             </div>
+        </div>
+        <div class="offers">
+            <div class="perspective">
+                <div class="perspective__3d">
+                    <div class="perspective__3d--card" style="background: url(./media/off2.jpg);">
+                        <h2>Un Week end dans l'espace</h2>
+                        .<span>à partir de $5.000 </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="offers">
+            <div class="perspective">
+
+                <div class="perspective__3d">
+                    <div class="perspective__3d--card" style="background: url(./media/off1.jpeg);">
+                        <h2>Un Week end dans l'espace</h2>
+                        <span>à partir de $5.000 </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="perspective">
+            <div class="perspective__3d">
+                <div class="perspective__3d--card" style="background: url(./media/off2.jpg);">
+                    <h2>balade sur la lune </h2>
+                    .<span>à partir de $15.000 </span>
+                </div>
+            </div>
+        </div>
         </div>
     </main>
 
