ajout code html sass et javascript des images en 3D

--- a/index.html
+++ b/index.html
@@ -38,37 +38,29 @@
         <div class="offers">
             <div class="perspective">
                 <div class="perspective__3d">
-                    <div class="perspective__3d--card" style="background: url(./media/off2.jpg);">
-                        <h2>Un Week end dans l'espace</h2>
-                        .<span>à partir de $5.000 </span>
+                    <div class="perspective__3d--card" style="background-image: url(./media/off2.jpg)">
+                        <h2>Marcher sur la lune</h2>
+                        <span>à partir de 5.000 € </span>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="offers">
-            <div class="perspective">
-
                 <div class="perspective__3d">
-                    <div class="perspective__3d--card" style="background: url(./media/off1.jpeg);">
-                        <h2>Un Week end dans l'espace</h2>
-                        <span>à partir de $5.000 </span>
+                    <div class="perspective__3d--card" style="background-image: url(./media/off1.jpeg)">
+                        <h2>Week end dans l'espace</h2>
+                        <span>à partir de 25.000 €</span>
+                    </div>
+                </div>
+                <div class="perspective__3d">
+                    <div class="perspective__3d--card" style="background-image: url(./media/off3.jpg)">
+                        <h2>Séjour sur Mars</h2>
+                        <span>à partir de 45.000 € </span>
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="perspective">
-            <div class="perspective__3d">
-                <div class="perspective__3d--card" style="background: url(./media/off2.jpg);">
-                    <h2>balade sur la lune </h2>
-                    .<span>à partir de $15.000 </span>
-                </div>
-            </div>
-        </div>
         </div>
     </main>
 
     <script type=" text/javascript " src="assets/jquery.min.js "></script>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
