--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="text/css" rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
     <title>mon projet SASS</title>
     <link rel="shortcut icon" href="./media/icon.png" />
-</head>
+</head>stylesheet
 
 <body>
     <header>
@@ -65,9 +66,16 @@
             <div class="button__text">GET STARTED</div>
             </a>
         </div>
-
     </main>
-
+    <footer>
+        <div class="network">
+            <a href="http://twitter.fr"><i class="fa fa-twitter"></i></a>
+            <a href="http://facebook.fr"><i class="fa fa-facebook"></i></a>
+            <a href="http://flickr.fr"><i class="fa fa-flickr"></i></a>
+            <a href="http://instagram.fr"><i class="fa fa-instagram"></i></a>
+            <a href="#">Barkhoum();- © 2021</a>
+        </div>
+    </footer>
     <script type=" text/javascript " src="assets/jquery.min.js "></script>
     <script type="text/javascript" src="./script.js"></script>
 </body>
