fin de programmation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
     <title>mon projet SASS</title>
     <link rel="shortcut icon" href="./media/icon.png" />
-</head>stylesheet
+</head>
 
 <body>
     <header>
@@ -73,7 +73,7 @@
             <a href="http://facebook.fr"><i class="fa fa-facebook"></i></a>
             <a href="http://flickr.fr"><i class="fa fa-flickr"></i></a>
             <a href="http://instagram.fr"><i class="fa fa-instagram"></i></a>
-            <a href="#">Barkhoum();- © 2021</a>
+            <a href="#">Barkhoum(); © 2021</a>
         </div>
     </footer>
     <script type=" text/javascript " src="assets/jquery.min.js "></script>
